added authentication library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "authentication": [
+        "dist/authentication"
+      ],
+      "authentication/*": [
+        "dist/authentication/*"
+      ]
+    }
   }
 }
